--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "A modern, cross-platform alternative to Bashgenn."
 repository = "https://github.com/romw314/rust-bashgenn/"
 rust-version = "1.75"
 readme = "README.md"
+license = "Unlicense"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
