--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Setup Rust
+      uses: ningenMe/setup-rustup@v1.1.0
+      with:
+        rust-version: 1.75
     - name: Build
       run: cargo build --verbose
     - name: Run tests
