--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rbgn"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 authors = ["romw314"]
 description = "A modern, cross-platform alternative to Bashgenn."
@@ -8,6 +8,14 @@ repository = "https://github.com/romw314/rust-bashgenn/"
 rust-version = "1.75"
 readme = "README.md"
 license = "Unlicense"
+
+[lib]
+name = "rbgn"
+path = "src/lib.rs"
+
+[[bin]]
+name = "rbgn"
+path = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
