--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4.4.18", features = ["derive", "cargo"] }
 linereader = "0.4.0"
+
+[target.'cfg(doctest)'.dependencies]
+anyhow = "1.0.79"
