--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,5 @@ path = "src/main.rs"
 clap = { version = "4.4.18", features = ["derive", "cargo"] }
 linereader = "0.4.0"
 
-[target.'cfg(doctest)'.dependencies]
+[dev-dependencies]
 anyhow = "1.0.79"
